chore: consolidated containers
